force-app/main/default/objects/Classification_Master__c/fields/I_RS_Classification_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Classification_Code__c</fullName>
    <description>Classification code</description>
    <label>Classification Master Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>