force-app/main/default/objects/Classification_Master__c/fields/I_RS_Classification_Master__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Classification_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to maintain hierarchy</description>
    <label>Classification Master</label>
    <referenceTo>Classification_Master__c</referenceTo>
    <relationshipLabel>Classification Masters</relationshipLabel>
    <relationshipName>Child_Classification_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>