force-app/main/default/objects/Classification_Master__c/fields/I_RS_Classification_Master_Name_and_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Classification_Master_Name_and_Code__c</fullName>
    <formula>I_RS_Classification_Type_Abbreviation__c &amp; &quot; : &quot; &amp; I_RS_Classification_Code__c &amp; &quot; - &quot; &amp;  LEFT(I_RS_Full_Classification_Name__c, 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Master Name and Code</label>
    <type>Text</type>
</CustomField>