force-app/main/default/objects/Classification_Master__c/fields/I_RS_Classification_Type_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Classification_Type_Abbreviation__c</fullName>
    <formula>IF( TEXT ( I_RS_Type__c ) = &apos;Type of Activity (TOA)&apos; , &apos;TOA&apos; , 
    IF( TEXT ( I_RS_Type__c ) = &apos;Fields of Research (FOR)&apos; , &apos;FOR&apos; ,
     IF( TEXT ( I_RS_Type__c ) = &apos;Fields of Research - 2008 (FOR - 08)&apos;, &apos;FOR - 08&apos; ,
       IF( TEXT ( I_RS_Type__c ) = &apos;Socio-economic Objective - 2008 (SEO - 08)&apos;, &apos;SEO - 08&apos;,&apos;SEO&apos; ) ) )
    
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Type Abbreviation</label>
    <type>Text</type>
</CustomField>