force-app/main/default/objects/Classification_Master__c/fields/I_RS_Full_Code_and_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Full_Code_and_Name__c</fullName>
    <description>Used as searchable title when using lookup component in Classification Code editable grid.</description>
    <formula>I_RS_Classification_Code__c + &apos; - &apos; +  I_RS_Full_Classification_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Code and Name</label>
    <type>Text</type>
</CustomField>