force-app/main/default/objects/Classification_Master__c/fields/I_RS_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Type__c</fullName>
    <description>Type of classification, eg FOR</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type of Activity (TOA)</fullName>
            </value>
            <value>
                <fullName>Fields of Research (FOR)</fullName>
            </value>
            <value>
                <fullName>Socio-economic Objective (SEO)</fullName>
            </value>
            <value>
                <fullName>Fields of Research - 2008 (FOR - 08)</fullName>
            </value>
            <value>
                <fullName>Socio-economic Objective - 2008 (SEO - 08)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>