force-app/main/default/objects/Classification_Master__c/listViews/All_Classification_Masters.listView-meta.xml
<ListView>
    <fullName>All_Classification_Masters</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Classification_Master__c</columns>
    <columns>I_RS_Classification_Code__c</columns>
    <columns>I_RS_Active__c</columns>
    <columns>I_RS_Full_Classification_Name__c</columns>
    <columns>I_RS_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Classification Masters</label>
</ListView>